[package]
name = "ProjectHash"
version = "0.1.0"
authors = ["D:\\Documents\\Групповая разработка приложений>git push --set-upstream https://gitlab.com/JurMarkin/simplebots.git master <eugeny007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
